--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,4 +94,14 @@
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/textView2"
             android:layout_marginRight="8dp" android:layout_marginBottom="30dp"
             app:layout_constraintBottom_toTopOf="@+id/etEid"/>
+    <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            app:srcCompat="@drawable/ic_add_black_24dp"
+            android:id="@+id/floatingActionButton" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:fabSize="normal" tools:ignore="VectorDrawableCompat"/>
+
+
 </android.support.constraint.ConstraintLayout>
