--- a/app/src/main/res/layout-normal-land/activity_main.xml
+++ b/app/src/main/res/layout-normal-land/activity_main.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout
+       xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.MainActivity" android:background="@android:color/white">
-
+        android:background="@android:color/white">
     <EditText
             android:enabled="false"
             android:editable="false"
@@ -31,7 +34,7 @@
             android:ems="10"
             android:id="@+id/etvoterId"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp" android:layout_marginTop="48dp"
+            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent" android:hint="Voter ID" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
             app:layout_constraintHorizontal_bias="0.503" android:textColor="#00bfff"
@@ -62,7 +65,6 @@
             app:layout_constraintTop_toBottomOf="@+id/etEid" app:layout_constraintHorizontal_bias="1.0"
             android:textColor="#00bfff" android:hint="Name"/>
     <Button
-
             android:text="@string/btn_name"
             android:layout_width="0dp"
             android:layout_height="40dp"
@@ -103,8 +105,9 @@
             android:clickable="true"
             app:srcCompat="@drawable/ic_add_black_24dp"
             android:id="@+id/floatingActionButton" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:fabSize="normal" tools:ignore="VectorDrawableCompat"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button_search"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button_search"/>
+
 </android.support.constraint.ConstraintLayout>
+</ScrollView>
